--- a/_includes/sidebar-toc.html
+++ b/_includes/sidebar-toc.html
@@ -20,10 +20,7 @@
 
   <div class="sidebar-item">
     <p>
-     Edited by {{ page.editor }}, {{ site.time | date: '%Y' }}.
-    </p>
-    <p>
-      Built with <a href="https://minicomp.github.io/ed/">Ed.</a> Distributed under an MIT license.
+      Built with <a href="https://minicomp.github.io/ed/">Ed.</a>
     </p>
   </div>
 </aside>
