add google search engine confirmation

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,9 @@
     {% endif %}
   </title>
 
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="6Ps9UMFwp-rawklRpCu_JxfOlhWk0XRYP2sY4rqGA4A" />
+
   <!-- Dublin Core metadata for Zotero -->
   <meta property="dc:title" content="{{ page.title }}" />
   <meta property="dc:creator" content="{% if page.author %}{{ page.author }}{% else %}{{ site.author.name }}{% endif %}" />
