--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 <article class="page">
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
